# endoc-sdk

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  zotero_collection_endoc_mapping.json
.github/workflows/: python-publish.yml
endoc/: __init__.py  client.py  decorators.py  endoc_client.py  exceptions.py  queries.py  utils.py
endoc/models/: document_search.py  note_library.py  paginated_search.py  pdf_import.py  single_paper.py  summarization.py  title_search.py
endoc/services/: document_search.py  get_note_library.py  paginated_search.py  pdf_import.py  single_paper_search.py  summarization.py  title_search.py
examples/: document_search.py  import_pdf.py  note_library.py  paginated_search.py  single_paper.py  summarize_paper.py  title_search.py
tests/: conftest.py
tests/fixtures/: document_search_fixtures.py  dummy_api.py  paginated_search_fixtures.py  single_paper_fixtures.py  summarization_fixtures.py
tests/integration/: test_endoc_client.py
tests/unit/: test_auth.py  test_custom_services.py  test_document_search.py  test_models.py  test_paginated_search.py  test_pdf_import.py  test_single_paper.py  test_summarization.py
